--- a/vista/css/home.css
+++ b/vista/css/home.css
@@ -14,6 +14,7 @@ body{
     font-family: 'DM Sans';
     font-size: 24px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .data1{
