--- a/vista/css/style.css
+++ b/vista/css/style.css
@@ -68,6 +68,16 @@ input {
     border-radius: 5px;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh; /* Asegura que cubra toda la pantalla */
+    background-image: url('../img/Background.svg');
+    background-size: cover; /* Hace que el SVG cubra todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat:repeat-y; /* Evita que se repita */
+}
+
 .menu{
     color: #3DE42E;
     font-size: 24px;
