--- a/vista/css/home.css
+++ b/vista/css/home.css
@@ -2,6 +2,9 @@ body{
     padding: 30px 30px;
     width: 100%;
     height: 1vw;
+    font-family: 'DM Sans';
+    display: flex;
+    flex-direction: column;
 }
 
 .menu i{
@@ -25,4 +28,46 @@ body{
 
 .data1 h1{
     margin-bottom: -2px;
+}
+
+.data1 h2{
+    font-weight: 400;
+}
+
+.dias{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dia{
+    padding: 24px;
+    font-family: "DM Sans";
+    font-size: 36px;
+    color: black;
+    background-color: #B1EB95;
+    border-radius: 20px;
+    margin-right: 15px;
+}
+
+.estado{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.estado-cultivo{
+    font-family: 'DM Sans';
+    font-size: 24px;
+    background-color: #A8FFBB;
+    margin-top: 40px;
+    width: 40%;
+    border-color: transparent;
+    border-radius: 24px;
+}
+
+.dron-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
