--- a/vista/css/home.css
+++ b/vista/css/home.css
@@ -71,3 +71,254 @@ body{
     align-items: center;
     justify-content: center;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+}
+
+.sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: white;
+    border-right: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.logo-section {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 20px;
+}
+
+.logo-circle {
+    width: 50px;
+    height: 50px;
+    background-color: #32CD32;
+    border-radius: 50%;
+}
+
+.user-info {
+    display: flex;
+    flex-direction: column;
+    color: #333;
+}
+
+.user-info p:first-child {
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #32CD32;
+}
+
+.menu-items ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.menu-items ul li {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    color: #333;
+    font-size: 1.1em;
+    cursor: pointer;
+}
+
+.menu-items ul li:hover {
+    background-color: #f4f4f4;
+}
+
+.menu-items ul li i {
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+
+.menu-items ul li .badge {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 0.8em;
+    margin-left: auto;
+}
+
+.profile-picture {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.profile-picture img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'DM Sans', sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+}
+
+.sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: white;
+    border-right: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.menu-items ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.menu-items ul li {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    color: #333;
+    font-size: 1.1em;
+    cursor: pointer;
+}
+
+.menu-items ul li:hover {
+    background-color: #f4f4f4;
+}
+
+.menu-items ul li i {
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+
+.menu-items ul li .badge {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 0.8em;
+    margin-left: auto;
+}
+
+.profile-picture {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.profile-picture img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'DM Sans', sans-serif;
+    background-color: #f4f4f4;
+}
+
+.hamburger {
+    width: 30px;
+    height: 25px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hamburger .bar {
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: 0.3s;
+}
+
+.sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: white;
+    border-right: 1px solid #ddd;
+    position: fixed;
+    left: -250px;
+    top: 0;
+    transition: left 0.3s;
+}
+
+.sidebar.open {
+    left: 0;
+}
+
+.menu-items ul {
+    list-style: none;
+    padding-left: 20px;
+    margin-top: 60px;
+}
+
+.menu-items ul li {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    color: #333;
+    font-size: 1.1em;
+    cursor: pointer;
+}
+
+.menu-items ul li:hover {
+    background-color: #f4f4f4;
+}
+
+.menu-items ul li i {
+    font-size: 1.5em;
+    margin-right: 10px;
+}
+
+.menu-items ul li .badge {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 0.8em;
+    margin-left: auto;
+}
+
+.profile-picture {
+    text-align: center;
+    margin-bottom: 20px;
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+}
+
+.profile-picture img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
