--- a/vista/css/style.css
+++ b/vista/css/style.css
@@ -153,3 +153,59 @@ body {
         font-size: 18px;
     }
 }
+
+.card0 {
+    width: 18rem;
+    padding: 10px;
+    background-color: #C8FFD4, #A8FFBB;
+}
+
+.card1 {
+    width: 18rem; 
+    background-color:#75D87C;
+    border-radius: 5px;
+}
+
+.card2 {
+    width: 18rem; 
+    background: #64CC6B;
+    border-radius: 5px;
+}
+
+.card3 {
+    width: 18rem; 
+    background: #6CCCAC;
+    border-radius: 5px;
+}
+
+.card4 {
+    width: 18rem; 
+    background: #40C196;
+    border-radius: 5px;
+}
+
+.res1 {
+    font: DM sans;
+    font-size: 22px;
+    color: #075800;
+    text-align: left ;
+    
+
+}
+
+.res2 {
+    font: DM sans;
+    font-size:  18px;
+    text-align: left;
+}
+
+.card border-dark mb-3 {
+    max-width: 18rem;
+}
+
+.rec1 {
+    font: DM sans;
+    font-size: 18px;
+    color: #075800;
+    text-align: left ;
+}
