--- a/vista/css/home.css
+++ b/vista/css/home.css
@@ -255,7 +255,7 @@ body {
 .hamburger .bar {
     width: 100%;
     height: 4px;
-    background-color: #3DE42E;
+    background-color: black;
     transition: 0.3s;
 }
 
@@ -321,4 +321,3 @@ body {
     border-radius: 50%;
     object-fit: cover;
 }
-
